Implemented the get & delete deployment feature
