# controller/deployment.controller.go
@@ -6,7 +6,6 @@ import (
 	v1 "k8s.io/api/apps/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 	"k8s.io/client-go/kubernetes"
-	"log"
 	"net/http"
 )
 
@@ -20,6 +19,12 @@ type DeploymentByNameResponse struct {
 	Status int64         `json:"status"`
 	Err    string        `json:"err"`
 	Data   v1.Deployment `json:"data"`
+}
+
+type DeleteDeploymentResponse struct {
+	Status int64  `json:"status"`
+	Err    string `json:"err"`
+	Data   bool   `json:"data"`
 }
 
 type K8sClient struct {
@@ -39,7 +44,7 @@ func NewDeploymentController(kubeConfig *K8sClient) DeploymentController {
 // @Description		Return list of deployment.
 // @Tags			deployment
 // @Router			/apis/apps/v1/{namespace}/deployments [get]
-// @Param 			namespace path string true "Namespace"
+// @Param 			namespace path string true "Namespace" default(default)
 // @Response		200 {object} DeploymentListResponse
 // @Produce			application/json
 func (dc *DeploymentController) ListDeployment(ctx *gin.Context) {
@@ -47,7 +52,6 @@ func (dc *DeploymentController) ListDeployment(ctx *gin.Context) {
 	deployments, err := dc.Client.AppsV1().Deployments(namespace).List(context.TODO(), metav1.ListOptions{})
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"data": make([]v1.DeploymentList, 0), "status": http.StatusBadRequest, "err": err})
-		log.Fatal(err)
 	}
 	ctx.JSON(http.StatusOK, gin.H{"data": deployments, "status": http.StatusOK, "err": nil})
 }
@@ -56,15 +60,38 @@ func (dc *DeploymentController) ListDeployment(ctx *gin.Context) {
 // @Summary			Get deployment by name.
 // @Description		Return deployment.
 // @Tags			deployment
-// @Router			/apis/apps/v1/:namespace/deployments/:name [get]
+// @Router			/apis/apps/v1/{namespace}/deployments/{name} [get]
+// @Param 			namespace path string true "Namespace" default(default)
+// @Param 			name path string true "Deployment name"
 // @Response		200 {object} DeploymentByNameResponse
 // @Produce			application/json
-//func (dc *DeploymentController) GetDeployment(ctx *gin.Context) {
-//	result, err := dc.Client.AppsV1().Deployments(apiv1.NamespaceDefault).Get(context.TODO(), "testingapi", metav1.GetOptions{})
-//
-//	if err != nil {
-//		ctx.JSON(http.StatusBadRequest, gin.H{"data": nil, "status": http.StatusBadRequest, "err": err})
-//		log.Fatal(err)
-//	}
-//	ctx.JSON(http.StatusOK, gin.H{"data": result, "status": http.StatusOK, "err": nil})
-//}
+func (dc *DeploymentController) GetDeployment(ctx *gin.Context) {
+	namespace := ctx.Param("namespace")
+	name := ctx.Param("name")
+	result, err := dc.Client.AppsV1().Deployments(namespace).Get(context.TODO(), name, metav1.GetOptions{})
+
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"data": nil, "status": http.StatusBadRequest, "err": err})
+		return
+	}
+	ctx.JSON(http.StatusOK, gin.H{"data": result, "status": http.StatusOK, "err": err})
+}
+
+// DeleteDeployment
+// @Summary			Delete deployment
+// @Tags			deployment
+// @Router			/apis/apps/v1/{namespace}/deployments/{name} [delete]
+// @Param 			namespace path string true "Namespace" default(default)
+// @Param 			name path string true "Deployment name"
+// @Response		200 {object} DeleteDeploymentResponse
+// @Produce			application/json
+func (dc *DeploymentController) DeleteDeployment(ctx *gin.Context) {
+	namespace := ctx.Param("namespace")
+	name := ctx.Param("name")
+	err := dc.Client.AppsV1().Deployments(namespace).Delete(context.Background(), name, metav1.DeleteOptions{})
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"data": false, "status": http.StatusBadRequest, "err": err})
+		return
+	}
+	ctx.JSON(http.StatusOK, gin.H{"data": true, "status": http.StatusOK, "err": err})
+}
